--- a/modules/client-configuration/pages/virtualization.adoc
+++ b/modules/client-configuration/pages/virtualization.adoc
@@ -28,9 +28,10 @@ For more information about using VHMs to manage virtualization, see xref:client-
 Before you begin, ensure that the client you want to use as a virtualization host has the ``Virtualization Host`` system type assigned to it.
 Both traditional and Salt clients can be used as virtual hosts.
 Navigate to menu:Systems[Systems List] and click the name of the client to use as a virtualization host.
-The system types are listed in the [guimenu]``System Properties`` section.
-If the ``Virtualization Host`` system type is not listed, click btn:[Edit These Properties] to assign it.
+If the ``Virtualization Host`` system type is not listed, initialize the [systemitem]``Virtualization Host`` formula.
+For more information, see xref:client-configuration:virt-xenkvm.adoc#virt-xenkvm-host[].
 
+// 2023-11-02, ke: is this still the case?
 When a client has the ``Virtualization Host`` system type, the [guimenu]``Virtualization`` tab is available in the System Details page for the client.
 The [guimenu]``Virtualization`` tab allows you to create and manage virtual guests, and manage storage pools and virtual networks.
 
@@ -96,10 +97,10 @@ In this case, check your subscription carefully.
 
 [NOTE]
 ====
-For BYOS instances (Bring Your Own Subscription), all installed products are passed to the subscription matcher.
-If your public cloud instances are PAYG (pay as you go), their base products are excluded from the subscription matcher counting.
+For {byos} instances ({byoslongform}), all installed products are passed to the subscription matcher.
+If your public cloud instances are {payg} ({payglongform}), their base products are excluded from the subscription matcher counting.
 
-The calculation about whether an instance is PAYG or BYOS is done at the time of registration or when a hardware refresh action is executed.
+The calculation about whether an instance is {payg} or {byos} is done at the time of registration or when a hardware refresh action is executed.
 ====
 
 For more information, see https://www.suse.com/products/terms_and_conditions.pdf or contact {suse}.
