--- a/modules/client-configuration/pages/clients-opensuseleapmicro.adoc
+++ b/modules/client-configuration/pages/clients-opensuseleapmicro.adoc
@@ -55,17 +55,17 @@ endif::[]
 
 ifeval::[{uyuni-content} == true]
 [[opensuse-leapmicro-channels-cli]]
-
-[cols="1,1", options="header"]
+[cols="1,1,1,1", options="header"]
 .{opensuse} Channels - CLI
 |===
 
-| OS Version          | {leapmicro} 5.x
-| Base Channel	      | opensuse_micro5_x
-| Client Channel      | opensuse_micro5_x-sle-updates
-| SLE Updates Channel | opensuse_micro5_x-uyuni-client
+| OS Version               | {leapmicro} 5.5                    | {leapmicro} 5.4                | {leapmicro} 5.3
+| Base Channel             | opensuse_micro5_5                  | opensuse_micro5_4              | opensuse_micro5_3
+| Client Channel           | opensuse_micro5_5-uyuni-client     | opensuse_micro5_4-uyuni-client | opensuse_micro5_3-uyuni-client
+| SLE Updates Channel      | opensuse_micro5_5-sle-updates      | opensuse_micro5_4-sle-updates  | opensuse_micro5_3-sle-updates
 
 |===
+
 
 include::snippets/addchannels_novendor_cli.adoc[]
 
