--- a/modules/client-configuration/pages/system-types.adoc
+++ b/modules/client-configuration/pages/system-types.adoc
@@ -4,7 +4,7 @@
 Clients are categorized by system type.
 Every client can have both a base system type, and an add-on system type assigned.
 
-Base system types include ``Salt`` for Salt clients.
+Base system type is ``Salt`` for all clients.
 
 Add-on system types include ``Virtualization Host``, for clients that operate as virtual hosts, 
 and ``Container Build Host`` for clients that operate as a build host.
