--- a/modules/client-configuration/pages/custom-info.adoc
+++ b/modules/client-configuration/pages/custom-info.adoc
@@ -18,7 +18,7 @@ Before you begin, you need to create a key that allows you to store custom infor
 . In the [guimenu]``Description`` field, provide any additional information required.
 . Repeat for each key you require.
 
-This information is available via Salt pillar.
+The information is available via {salt} pillar.
 You can retrieve this information with a command such as:
 
 ----
