--- a/modules/client-configuration/pages/registration-cli.adoc
+++ b/modules/client-configuration/pages/registration-cli.adoc
@@ -1,7 +1,7 @@
 [[registering-clients-cli]]
 = Register on the Command Line
 
-== Manual Salt client registration
+== Manual client registration
 
 In most cases, Salt clients are registered accurately with the default bootstrap methods.
 However, you can use Salt to register the client to the {productname} Server manually by editing the Salt minion file on the client, and providing the fully qualified domain name (FQDN) of the server.
