--- a/modules/client-configuration/pages/registration-cli.adoc
+++ b/modules/client-configuration/pages/registration-cli.adoc
@@ -71,7 +71,7 @@ salt-key -a '<client>'
 --
 
 
-== {salt} Minion configuration
+== Client configuration
 
 {salt} Minion ([package]``salt-minion``)::
 +
