--- a/modules/client-configuration/pages/registration-cli.adoc
+++ b/modules/client-configuration/pages/registration-cli.adoc
@@ -73,7 +73,7 @@ salt-key -a '<client>'
 
 == Client configuration
 
-{salt} Minion ([package]``salt-minion``)::
+Client ([package]``salt-minion``)::
 +
 * [path]``/etc/salt/``
 * [path]``/etc/salt/minion``
