Removed Ubuntu 18.04 from the support matrix.

--- a/modules/client-configuration/pages/clients-ubuntu.adoc
+++ b/modules/client-configuration/pages/clients-ubuntu.adoc
@@ -14,8 +14,8 @@ ifeval::[{suma-content} == true]
 endif::[]
 
 ifeval::[{suma-content} == true]
-{productname} supports {ubuntu} 18.04 LTS, 20.04 LTS and 22.04 LTS clients using Salt.
-For information about registering Salt clients running {ubuntu} 18.04 LTS, see xref:client-configuration:clients-ubuntu-old.adoc[].
+{productname} supports {ubuntu} 20.04 LTS and 22.04 LTS clients using {salt}.
+//For information about registering Salt clients running {ubuntu} 18.04 LTS, see xref:client-configuration:clients-ubuntu-old.adoc[].
 endif::[]
 
 Bootstrapping is supported for starting {ubuntu} clients and performing initial state runs such as setting repositories and performing profile updates.
