--- a/modules/installation-and-upgrade/pages/client-requirements.adoc
+++ b/modules/installation-and-upgrade/pages/client-requirements.adoc
@@ -83,7 +83,7 @@ ifeval::[{suma-content} == true]
 | {x86_64}, {aarch64}
 | {check}
 
-| {ubuntu} 22.04, 20.04, 18.04
+| {ubuntu} 22.04, 20.04
 | {amd64}
 | {check}
 
@@ -175,7 +175,7 @@ ifeval::[{uyuni-content} == true]
 | {x86_64}, {aarch64}
 | {check}
 
-| {ubuntu} 22.04, 20.04, 18.04
+| {ubuntu} 22.04, 20.04
 | {amd64}
 | {check}
 
