--- a/modules/client-configuration/pages/supported-features.adoc
+++ b/modules/client-configuration/pages/supported-features.adoc
@@ -95,7 +95,7 @@ ifeval::[{suma-content} == true]
 | {x86_64}, {aarch64}
 | {check}
 
-| {ubuntu} 22.04, 20.04, 18.04
+| {ubuntu} 22.04, 20.04
 | {amd64}
 | {check}
 
@@ -185,7 +185,7 @@ ifeval::[{uyuni-content} == true]
 | {x86_64}, {aarch64}
 | {check}
 
-| {ubuntu} 22.04, 20.04, 18.04
+| {ubuntu} 22.04, 20.04
 | {amd64}
 | {check}
 
