--- a/modules/client-configuration/pages/clients-amazon.adoc
+++ b/modules/client-configuration/pages/clients-amazon.adoc
@@ -17,7 +17,7 @@ endif::[]
 
 [WARNING]
 ====
-When created at AWS, {amazon} 2 instances always have the same `machine-id` id at `/etc/machine-id`.
+When created at {aws}, {amazon} 2 instances always have the same `machine-id` id at `/etc/machine-id`.
 If you are creating {amazon} 2 instances, make sure you regenerate the `machine-id` after the instances are created.
 For more information, see xref:administration:troubleshooting/tshoot-registerclones.adoc[].
 
