43 - Removed Ubuntu 18.04 from the support matrix.

--- a/modules/client-configuration/pages/clients-ubuntu.adoc
+++ b/modules/client-configuration/pages/clients-ubuntu.adoc
@@ -1,7 +1,7 @@
 [[clients-ubuntu]]
 = Registering {ubuntu} 20.04 and 22.04 Clients
 
-This section contains information about registering Salt clients running {ubuntu} 20.04 LTS and 22.04 LTS operating systems.
+This section contains information about registering {salt} clients running {ubuntu} 20.04 LTS and 22.04 LTS operating systems.
 
 ifeval::[{suma-content} == true]
 // Use list format: repository URLs / packages and metadata / version info
@@ -13,10 +13,12 @@ ifeval::[{suma-content} == true]
 ====
 endif::[]
 
+
 ifeval::[{suma-content} == true]
-{productname} supports {ubuntu} 18.04 LTS, 20.04 LTS and 22.04 LTS clients using Salt.
-For information about registering Salt clients running {ubuntu} 18.04 LTS, see xref:client-configuration:clients-ubuntu-old.adoc[].
+{productname} supports {ubuntu} 20.04 LTS and 22.04 LTS clients using {salt}.
+For information about registering {salt} clients running {ubuntu} 18.04 LTS, see xref:client-configuration:clients-ubuntu-old.adoc[].
 endif::[]
+
 
 [IMPORTANT]
 ====
