CCG remove traditional clients feature #18879 (the rest) (#2628)
Co-authored-by: Ornela Marić <omaric@suse.com>

--- a/modules/client-configuration/pages/custom-info.adoc
+++ b/modules/client-configuration/pages/custom-info.adoc
@@ -18,8 +18,8 @@ Before you begin, you need to create a key that allows you to store custom infor
 . In the [guimenu]``Description`` field, provide any additional information required.
 . Repeat for each key you require.
 
-For Salt clients, this information is available via Salt pillar.
-You can retrieve this information from a Salt client with a command such as:
+The information is available via {salt} pillar.
+You can retrieve this information with a command such as:
 
 ----
 salt $minionid pillar.get custom_info:key1
