--- a/modules/client-configuration/pages/registration-bootstrap.adoc
+++ b/modules/client-configuration/pages/registration-bootstrap.adoc
@@ -50,7 +50,7 @@ Replace [systemitem]``<ACTIVATION_KEY`` and [systemitem]``<EDITED_NAME>`` with y
 mgr-bootstrap --activation-keys=<ACTIVATION_KEY> --script=bootstrap-<EDITED_NAME>.sh
 ----
 
-The [command]``mgr-bootstrap`` command offers several other options, including the ability to set a specific hostname, set specific GPG keys, and set the registration method (traditional, salt-minion, or salt-bundle).
+The [command]``mgr-bootstrap`` command offers several other options, including the ability to set a specific hostname, set specific GPG keys, and set the registration method (salt-minion or salt-bundle).
 
 For more information, see the [literal]``mgr-bootstrap`` man page, or run [command]``mgr-bootstrap --help``.
 
@@ -64,14 +64,12 @@ You can use the {productname} {webui} to create an editable bootstrap script.
 
 .Procedure: Creating a Bootstrap Script
 . In the {productname} {webui}, navigate to menu:Admin[Manager Configuration > Bootstrap Script].
-. In the [guimenu]``SUSE Manager Configuration - Bootstrap`` dialog, uncheck the [guimenu]``Bootstrap using Salt`` checkbox if you are installing a traditional client.
-    For Salt clients, leave it checked.
 . The required fields are pre-populated with values derived from previous installation steps.
-    For details on each setting, see xref:reference:admin/bootstrap-script.adoc[].
+  For details on each setting, see xref:reference:admin/bootstrap-script.adoc[].
 . Click btn:[Update] to create the script.
 . The bootstrap script is generated and stored on the server in the [path]``/srv/www/htdocs/pub/bootstrap`` directory.
-    Alternatively, you can access the bootstrap script over HTTPS.
-    Replace [literal]``<example.com>`` with the host name of your {productname} Server:
+  Alternatively, you can access the bootstrap script over HTTPS.
+  Replace [literal]``<example.com>`` with the host name of your {productname} Server:
 ----
 https://<example.com>/pub/bootstrap/bootstrap.sh
 ----
@@ -137,8 +135,8 @@ ORG_GPG_KEY=
 
 [NOTE]
 ====
-By default, bootstrap script will try to install [package]``venv-salt-minion`` for Salt clients if it's available in the bootstrap repository and [package]``salt-minion`` if there is no Salt bundle in the bootstrap repository.
-It is posible to avoid installing Salt bundle and keep using [package]``salt-minion`` if you need it for some reason. 
+By default, bootstrap script will try to install [package]``venv-salt-minion`` if it is available in the bootstrap repository and [package]``salt-minion`` if there is no {salt} bundle in the bootstrap repository.
+It is possible to avoid installing {salt} bundle and keep using [package]``salt-minion`` if you need it for some reason.
 
 For more information, see xref:client-configuration:contact-methods-saltbundle.adoc[Salt Bundle].
 ====
