--- a/modules/client-configuration/pages/registration-cli.adoc
+++ b/modules/client-configuration/pages/registration-cli.adoc
@@ -1,7 +1,7 @@
 [[registering-clients-cli]]
-= Register on the Command Line (Salt)
+= Register on the Command Line
 
-== Manual Salt client registration
+== Manual client registration
 
 In most cases, Salt clients are registered accurately with the default bootstrap methods.
 However, you can use Salt to register the client to the {productname} Server manually by editing the Salt minion file on the client, and providing the fully qualified domain name (FQDN) of the server.
@@ -17,9 +17,9 @@ The systemd service filename is different.
 Bootstrapping this way will only work if you use the [package]``salt-minion`` being part of the client tools channels or of an official {suse} distributions.
 ====
 
-=== Salt Bundle configuration
+== {salt} Bundle configuration
 
-Salt Bundle ([package]``venv-salt-minion``)::
+{salt} Bundle ([package]``venv-salt-minion``)::
 +
 * [path]``/etc/venv-salt-minion/``
 * [path]``/etc/venv-salt-minion/minion``
@@ -71,9 +71,9 @@ salt-key -a '<client>'
 --
 
 
-=== Salt Minion configuration
+== Client configuration
 
-Salt Minion ([package]``salt-minion``)::
+Client ([package]``salt-minion``)::
 +
 * [path]``/etc/salt/``
 * [path]``/etc/salt/minion``
@@ -94,7 +94,8 @@ or:
 ----
 /etc/salt/minion.d/NAME.conf
 ----
-. In the file add or edit the FQDN of the {productname} Server or Proxy, and the activation key if any. Also add the other configuration parameters listed below.
+. In the file add or edit the FQDN of the {productname} Server or Proxy, and the activation key if any.
+  Also add the other configuration parameters listed below.
 +
 ----
 master: SERVER.EXAMPLE.COM
