--- a/modules/client-configuration/pages/system-types.adoc
+++ b/modules/client-configuration/pages/system-types.adoc
@@ -4,77 +4,10 @@
 Clients are categorized by system type.
 Every client can have both a base system type, and an add-on system type assigned.
 
-Base system types include ``Management``, for traditional clients, and ``Salt`` for Salt clients.
+Base system type is ``Salt`` for all clients.
 
 Add-on system types include ``Virtualization Host``, for clients that operate as virtual hosts, 
 and ``Container Build Host`` for clients that operate as a build host.
 
 You can adjust the add-on system type by navigating to menu:Systems[System List > System Types].
 Check the clients you want to change the add-on system type for, select the [guimenu]``Add-On System Type``, and click either btn:[Add System Type] or btn:[Remove System Type].
-
-You can also change the base system type from ``Management`` to ``Salt``, by re-registering the client.
-
-[WARNING]
-====
-Changing the base system type requires that you re-register your client.
-This deletes any customization or configuration on the client, however event history is preserved.
-It also requires client downtime.
-====
-
-
-== Change a Traditional Client to Salt Using the {webui}
-
-The simplest method to change a traditional client to a Salt client is to re-register it with the {webui}.
-
-//[WARNING]
-//====
-//Changing the base system type requires that you re-register your client.
-//This deletes any customization or configuration on the client, however event history is preserved.
-//It also requires client downtime.
-//====
-
-
-// Not tested --LKB 2020-09-22
-.Procedure: Changing a Traditional Client to Salt Using the {webui}
-. In the {productname} {webui}, navigate to menu:Systems[System List], identify the client you want to change, and take a note of the hostname.
-. Navigate to menu:Systems[Bootstrapping].
-. In the [guimenu]``Host`` field, type the hostname of the client to be re-registered.
-. Complete the other fields as required.
-. Click btn:[Bootstrap] to schedule the bootstrap process.
-+
-When the client has completed registration, it shows in the [guimenu]``Systems List`` with the system type ``Salt``.
-
-
-
-== Change a Traditional Client to Salt at the Command Prompt
-
-You can use the command prompt to re-register a traditional client as a Salt client.
-This requires you to delete the packages used by the traditional client.
-You can then re-register the client using your preferred registration method for Salt clients.
-
-//[WARNING]
-//====
-//Changing the base system type requires that you re-register your client.
-//This deletes any customization or configuration on the client.
-//It also requires client downtime.
-//====
-
-
-// Not tested --LKB 2020-09-22
-.Procedure: Changing a Traditional Client to Salt at the Command Prompt
-. On the client to be changed, at the command prompt, use your package manager to remove these packages:
-+
-----
-spacewalk-check
-spacewalk-client-setup
-osad
-osa-common
-mgr-osad
-spacewalksd
-mgr-daemon
-rhnlib
-rhnmd
-----
-. Use your preferred registration method to re-register the client as a Salt client.
-+
-When the client has completed registration, it shows in the [guimenu]``Systems List`` with the system type ``Salt``.
