trad. client contact methods

--- a/modules/client-configuration/pages/contact-methods-salt.adoc
+++ b/modules/client-configuration/pages/contact-methods-salt.adoc
@@ -4,9 +4,13 @@
 The Salt contact method is the default choice and recommended unless there are specific needs.
 For more information about Salt in general, see xref:specialized-guides:salt/salt-overview.adoc[].
 
+ifeval::[{suma-content} == true]
 The Salt Contact Method is the best scaling method.
-All new {productname} features are supported and it has the widest variety of supported operating systems.
-All new operating systems are always supported with this contact method.
+All new {productname} features are supported.
+
+The so-called traditional contact method is no longer supported with {productname} 5.0 and later.
+Traditional clients and thus traditional proxies have to be migrated to {salt} or replaced with {salt} proxies.
+endif::[]
 
 Software updates are generally pushed from the server to the client.
 Connections are initiated from the client.
