--- a/modules/client-configuration/pages/clients-ubuntu-old.adoc
+++ b/modules/client-configuration/pages/clients-ubuntu-old.adoc
@@ -2,36 +2,19 @@
 = Registering {ubuntu} 18.04 Clients
 
 
-ifeval::[{suma-content} == true]
-
 {productname} supports {ubuntu} 20.04 LTS and 22.04 LTS clients using Salt.
 For information about registering Salt clients running {ubuntu} 20.04 and 22.04, see xref:client-configuration:clients-ubuntu.adoc[].
 
-endif::[]
+{ubuntu} 18.04 LTS has reached end-of-life.
 
-{ubuntu} 18.04 LTS is considered end-of-life.
-
-[IMPORTANT]
-====
 include::snippets/eol-clients.adoc[]
-====
 
-This section contains information about registering {salt} clients running {ubuntu} 18.04 LTS operating systems.
-
-ifeval::[{suma-content} == true]
-// Use list format: repository URLs / packages and metadata / version info
 [IMPORTANT]
 ====
 * {ubuntu} 18.04 repository URLs are not available from {scc}
 * Packages and metadata are provided by Ubuntu, not by {suse}
 * For supported products, see the support table and the release notes
-====
-endif::[]
-
-
-[IMPORTANT]
-====
-Canonical does not endorse or support {productname}.
+* Canonical does not endorse or support {productname}
 ====
 
 [NOTE]
@@ -43,15 +26,13 @@ Traditional clients are not supported.
 Bootstrapping is supported for starting {ubuntu} clients and performing initial state runs such as setting repositories and performing profile updates.
 However, the root user on {ubuntu} is disabled by default, so to use bootstrapping, you require an existing user with [command]``sudo`` privileges for Python.
 
-
+This section contains information about registering {salt} clients running {ubuntu} 18.04 LTS operating systems.
 
 == Add Software Channels
 
 Before you register {ubuntu} clients to your {productname} Server, you need to add the required software channels, and synchronize them.
 
 include::snippets/arch-other-note.adoc[]
-
-ifeval::[{suma-content} == true]
 
 The products you need for this procedure are:
 
@@ -69,13 +50,6 @@ The products you need for this procedure are:
 When using WebUI to add Ubuntu 18.04 channels, you also need to add ubuntu-1804-amd64-main and ubuntu-1804-amd64-main-updates channels using CLI, as described in <<ubuntu-old-channels-cli-suma>>.
 ====
 
-//[NOTE]
-//====
-//{ubuntu} 16.04 is now at end-of-life, and the ISO images provided in the repository are out of date.
-//Bootstrapping new {ubuntu} 16.04 clients using these packages will fail.
-//If you need to bootstrap new {ubuntu} 16.04 clients, follow the troubleshooting procedure in xref:administration:tshoot-intro.adoc[Troubleshooting].
-//====
-
 include::snippets/addchannels_vendor_webui.adoc[]
 
 Alternatively, you can add channels at the command prompt.
@@ -90,23 +64,6 @@ The channels you need for this procedure are:
 | {ubuntu} 18.04 | ubuntu-18.04-pool-amd64
 |===
 
-//[NOTE]
-//====
-//{ubuntu} 16.04 is now at end-of-life, and the ISO images provided in the repository are out of date.
-//Bootstrapping new {ubuntu} 16.04 clients using these packages will fail.
-//If you need to bootstrap new {ubuntu} 16.04 clients, follow the troubleshooting procedure in xref:administration:tshoot-intro.adoc[Troubleshooting].
-//====
-
-endif::[]
-
-ifeval::[{suma-content} == true]
-
-//[NOTE]
-//====
-//{ubuntu} 16.04 is now at end-of-life, and the ISO images provided in the repository are out of date.
-//Bootstrapping new {ubuntu} 16.04 clients using these packages will fail.
-//If you need to bootstrap new {ubuntu} 16.04 clients, follow the troubleshooting procedure in xref:administration:tshoot-intro.adoc[Troubleshooting].
-//====
 
 include::snippets/addchannels_novendor_cli.adoc[]
 
@@ -138,61 +95,11 @@ Set a daily or weekly synchronization schedule, and click btn:[Schedule].
 The client tools channel provided by [command]``spacewalk-common-channels`` is sourced from {uyuni} and not from {suse}.
 ====
 
-endif::[]
-
-ifeval::[{uyuni-content} == true]
-
-The channels you need for this procedure are:
-// Why are there so many of these?! Maybe better as a bulleted list? Although then it's different to all the others. Sigh. --LKB 2020-06-11
-[[ubuntu-old-channels-cli-uyuni]]
-[cols="1,1,1", options="header"]
-.Ubuntu Channels - CLI
-|===
-
-| OS Version | {ubuntu} 18.04
-| Base Channel | ubuntu-1804-pool-amd64-uyuni
-| Main Channel | ubuntu-1804-amd64-main-uyuni
-| Updates Channel | ubuntu-1804-amd64-main-updates-uyuni
-| Security Channel | ubuntu-1804-amd64-main-security-uyuni
-| Universe Channel | ubuntu-1804-amd64-universe-uyuni
-| Universe Updates Channel | ubuntu-1804-amd64-universe-updates-uyuni
-| Universe Security Updates Channel | ubuntu-1804-amd64-universe-security-uyuni
-| Client Channel | ubuntu-1804-amd64-uyuni-client
-
-|===
-
-
-//[NOTE]
-//====
-//{ubuntu} 16.04 is now at end-of-life, and the ISO images provided in the repository are out of date.
-//Bootstrapping new {ubuntu} 16.04 clients using these packages will fail.
-//If you need to bootstrap new {ubuntu} 16.04 clients, follow the troubleshooting procedure in xref:administration:tshoot-intro.adoc[Troubleshooting].
-//====
-
-include::snippets/addchannels_novendor_cli.adoc[]
-
-[IMPORTANT]
-====
-You need all the new channels fully synchronized, including Universe (Universe contains important dependencies for Salt), before bootstrapping any Ubuntu client.
-====
-
-endif::[]
-
-
 
 == Check Synchronization Status
 
-ifeval::[{suma-content} == true]
-
 include::snippets/check_sync_webui_suma.adoc[]
 
-endif::[]
-
-ifeval::[{uyuni-content} == true]
-
-include::snippets/check_sync_webui_uyuni.adoc[]
-
-endif::[]
 
 include::snippets/check_sync_cli.adoc[]
 
@@ -203,13 +110,6 @@ Synchronization can sometimes take several hours.
 ====
 
 
-
-//ifeval::[{uyuni-content} == true]
-//== Trust GPG Keys on Clients
-
-//include::snippets/trust_gpg.adoc[]
-
-//endif::[]
 
 == Manage GPG Keys
 
@@ -266,4 +166,3 @@ We recommend that you remove the line from the [path]``sudoers`` file after the 
 == Register Clients
 
 include::snippets/create_bootstrap_repo_register.adoc[]
-
