ssh-push-default task renamed to ssh-service-default

--- a/modules/administration/pages/task-schedules.adoc
+++ b/modules/administration/pages/task-schedules.adoc
@@ -123,8 +123,9 @@ For more information, see xref:reference:systems/system-details/sd-configuration
 menu:session-cleanup-default[]::
 Cleans up stale Web interface sessions, typically data that is temporarily stored when a user logs in and then closes the browser before logging out.
 
-menu:ssh-push-default[]::
+menu:ssh-service-default[]::
 Prompts clients to check in with {productname} via SSH if they are configured with a `SSH Push` contact method.
+Also resume action chains after a reboot.
 
 menu:system-profile-refresh-default[]::
 Runs a hardware refresh on all systems. 
