43 - Removed Ubuntu 18.04 from the support matrix. (#2636)
* 43 - Removed Ubuntu 18.04 from the support matrix.

* Added changelog.

* Cont.

* Cont.

* Cont.

---------

Co-authored-by: Joseph Cayouette <jcayouette@suse.com>

--- a/modules/client-configuration/pages/clients-ubuntu.adoc
+++ b/modules/client-configuration/pages/clients-ubuntu.adoc
@@ -1,31 +1,21 @@
 [[clients-ubuntu]]
 = Registering {ubuntu} 20.04 and 22.04 Clients
 
-This section contains information about registering Salt clients running {ubuntu} 20.04 LTS and 22.04 LTS operating systems.
 
-ifeval::[{suma-content} == true]
+This section contains information about registering {salt} clients running {ubuntu} 20.04 LTS and 22.04 LTS operating systems.
+
 // Use list format: repository URLs / packages and metadata / version info
 [IMPORTANT]
 ====
 * {ubuntu} 20.04 and 22.04 repository URLs are available from {scc}
 * Packages and metadata are provided by Ubuntu, not by {suse}
 * For supported products, see the support table and the release notes
-====
-endif::[]
-
-ifeval::[{suma-content} == true]
-{productname} supports {ubuntu} 18.04 LTS, 20.04 LTS and 22.04 LTS clients using Salt.
-For information about registering Salt clients running {ubuntu} 18.04 LTS, see xref:client-configuration:clients-ubuntu-old.adoc[].
-endif::[]
-
-[IMPORTANT]
-====
-Canonical does not endorse or support {productname}.
+* Canonical does not endorse or support {productname}.
 ====
 
 [NOTE]
 ====
-{ubuntu} is supported for Salt clients only.
+{ubuntu} is supported for {salt} clients only.
 Traditional clients are not supported.
 ====
 
@@ -40,7 +30,6 @@ Before you register {ubuntu} clients to your {productname} Server, you need to a
 
 include::snippets/arch-other-note.adoc[]
 
-ifeval::[{suma-content} == true]
 
 The products you need for this procedure are:
 
@@ -71,47 +60,12 @@ The channels you need for this procedure are:
 
 include::snippets/addchannels_vendor_cli.adoc[]
 
-endif::[]
-
-
-ifeval::[{uyuni-content} == true]
-The channels you need for this procedure are:
-
-[[ubuntu-channels-cli-uyuni]]
-[cols="1,1,1,1,1,1", options="header"]
-.Ubuntu Channels - CLI
-|===
-
-| OS Version | Base Channel | Main Channel | Updates Channel | Security Channel | Client Channel
-
-| {ubuntu} 20.04 | ubuntu-2004-pool-amd64-uyuni | ubuntu-2004-amd64-main-uyuni | ubuntu-2004-amd64-main-updates-uyuni | ubuntu-2004-amd64-main-security-uyuni | ubuntu-2004-amd64-uyuni-client
-| {ubuntu} 22.04 | ubuntu-2204-pool-amd64-uyuni | ubuntu-2204-amd64-main-uyuni | ubuntu-2204-amd64-main-updates-uyuni | ubuntu-2204-amd64-main-security-uyuni | ubuntu-2204-amd64-uyuni-client
-|===
-
-include::snippets/addchannels_novendor_cli.adoc[]
-
-[IMPORTANT]
-====
-You need all the new channels fully synchronized before bootstrapping any Ubuntu client.
-====
-
-endif::[]
-
 
 
 == Check Synchronization Status
 
-ifeval::[{suma-content} == true]
 
 include::snippets/check_sync_webui_suma.adoc[]
-
-endif::[]
-
-ifeval::[{uyuni-content} == true]
-
-include::snippets/check_sync_webui_uyuni.adoc[]
-
-endif::[]
 
 include::snippets/check_sync_cli.adoc[]
 
@@ -122,14 +76,6 @@ Synchronization can sometimes take several hours.
 ====
 
 
-
-//ifeval::[{uyuni-content} == true]
-
-//== Trust GPG Keys on Clients
-
-//include::snippets/trust_gpg.adoc[]
-
-//endif::[]
 
 == Manage GPG Keys
 
@@ -186,4 +132,3 @@ We recommend that you remove the line from the [path]``sudoers`` file after the 
 == Register Clients
 
 include::snippets/create_bootstrap_repo_register.adoc[]
-
