--- a/modules/client-configuration/pages/supported-features.adoc
+++ b/modules/client-configuration/pages/supported-features.adoc
@@ -33,9 +33,6 @@ For details on supported product versions, see https://www.suse.com/lifecycle.
 The operating system running on a client is supported by the organization that supplies the operating system.
 ====
 
-[[supported-client-systems-snippet]]
-
-ifeval::[{suma-content} == true]
 [[mgr.support.clients]]
 [cols="1,1,1,1", options="header"]
 .Supported Client Systems
@@ -47,6 +44,7 @@ ifeval::[{suma-content} == true]
 
 | {sle} 15, 12
 | {x86_64}, {ppc64le}, {ibmz}, {aarch64}
+| {check}
 | {check}
 
 | {sles} for SAP 15, 12
@@ -109,104 +107,13 @@ ifeval::[{suma-content} == true]
 | {cross}
 | {check}
 
-| {ubuntu} 22.04, 20.04, 18.04
+| {ubuntu} 22.04, 20.04
 | {amd64}
 | {cross}
 | {check}
 
 |===
-endif::[]
 
-
-ifeval::[{uyuni-content} == true]
-[[uyuni.supported.clients]]
-[cols="1,1,1,1", options="header"]
-.Supported Client Systems
-|===
-
-| Operating System
-| Architecture
-| Traditional Clients
-| Salt Clients
-
-| {sle} 15, 12
-| {x86_64}, {ppc64le}, {ibmz}, {aarch64}
-| {check}
-| {check}
-
-| {sles} for SAP 15, 12
-| {x86_64}, {ppc64le}
-| {check}
-| {check}
-
-| {micro}
-| {x86_64}, {aarch64}, {s390x}
-| {cross}
-| {check}
-
-| {opensuse} Leap Micro
-| {x86_64}, {aarch64}
-| {check}
-
-| {opensuse} Leap 15
-| {x86_64}, {aarch64}
-| {check}
-// SUSE Liberty Linux not available at Uyuni for now
-//| {sles} ES 7
-//| {x86_64}
-//| {check}
-// SUSE Liberty Linux not available at Uyuni for now
-//| {sles} ES 8
-//| {x86_64}
-//| {check}
-// SUSE Liberty Linux not available at Uyuni for now
-//| {sll} 9
-//| {x86_64}
-//| {check}
-
-| {alibabaclo} 2
-| {x86_64}, {aarch64}
-| {cross}
-| {check}
-
-| {almalinux} 9, 8
-| {x86_64}, {aarch64}
-| {check}
-
-| {amazon} 2
-| {x86_64}, {aarch64}
-| {cross}
-| {check}
-
-| {centos} 7
-| {x86_64}, {ppc64le}, {aarch64}
-| {check}
-
-| {debian} 12, 11, 10
-| {x86_64}
-| {check}
-
-| {oracle} 9, 8, 7
-| {x86_64}, {aarch64}
-| {cross}
-| {check}
-
-| {rhel} 9, 8, 7
-| {x86_64}
-| {cross}
-| {check}
-
-| {rocky} 9, 8
-| {x86_64}, {aarch64}
-| {check}
-
-| {ubuntu} 22.04, 20.04, 18.04
-| {amd64}
-| {cross}
-| {check}
-
-|===
-endif::[]
 
 [NOTE]
 ====
@@ -221,9 +128,7 @@ include::snippets/eol-clients.adoc[]
 
 The ``spacewalk-utils`` and ``spacewalk-utils-extras`` packages can provide additional services and features.
 
-ifeval::[{suma-content} == true]
 The ``spacewalk-utils`` package in {productname} is fully supported by {suse}, and contains these tools:
-endif::[]
 
 [[spacewalk-utils]]
 [cols="1,1,1", options="header"]
@@ -256,6 +161,4 @@ endif::[]
 
 |===
 
-ifeval::[{suma-content} == true]
 The ``spacewalk-utils-extras`` package in {productname} has limited support by {suse}.
-endif::[]
