--- a/modules/specialized-guides/pages/public-cloud-guide/payg/payg-limitations.adoc
+++ b/modules/specialized-guides/pages/public-cloud-guide/payg/payg-limitations.adoc
@@ -1,6 +1,6 @@
 == {productname} {payg} Limitations
 
-=== Bring-your-own-suscription instances already onboarded without SCC credentials
+=== {byoslongform} instances already onboarded without SCC credentials
 To manage Bring-your-own-subscription (BYOS) instances of SUSE products in {productname} {payg} valid SCC credentials are needed. This applies to all SUSE products with just one exception: SUSE Manager Proxy BYOS. Without any SCC credentials, {productname} {payg} will not allow to onboard any of the mentioned BYOS instances, giving the user an error.
 
 There is a possibility that the user has valid SCC credentials set with already synced-up channels as well as BYOS onboarded but at some point decides to delete those credentials. In the scenario of having already onboarded BYOS instances but no SCC credentials set, the following restrictions apply:
