--- a/modules/specialized-guides/pages/public-cloud-guide/payg/payg-limitations.adoc
+++ b/modules/specialized-guides/pages/public-cloud-guide/payg/payg-limitations.adoc
@@ -1,7 +1,10 @@
 == {productname} {payg} Limitations
 
 === {byoslongform} instances already onboarded without SCC credentials
-To manage Bring-your-own-subscription (BYOS) instances of SUSE products in {productname} {payg} valid SCC credentials are needed. This applies to all SUSE products with just one exception: SUSE Manager Proxy BYOS. Without any SCC credentials, {productname} {payg} will not allow to onboard any of the mentioned BYOS instances, giving the user an error.
+To manage {byoslongform} ({byos}) instances of SUSE products in {productname} {payg} valid SCC credentials are needed. 
+This applies to all SUSE products except SUSE Manager Proxy {byos}. 
+Without any SCC credentials, {productname} {payg} will not allow onboarding any of the mentioned {byos} instances.
+The user will get an error.
 
 There is a possibility that the user has valid SCC credentials set with already synced-up channels as well as BYOS onboarded but at some point decides to delete those credentials. In the scenario of having already onboarded BYOS instances but no SCC credentials set, the following restrictions apply:
 
