--- a/modules/specialized-guides/pages/public-cloud-guide/payg/payg-limitations.adoc
+++ b/modules/specialized-guides/pages/public-cloud-guide/payg/payg-limitations.adoc
@@ -6,7 +6,9 @@ This applies to all SUSE products except SUSE Manager Proxy {byos}.
 Without any SCC credentials, {productname} {payg} will not allow onboarding any of the mentioned {byos} instances.
 The user will get an error.
 
-There is a possibility that the user has valid SCC credentials set with already synced-up channels as well as BYOS onboarded but at some point decides to delete those credentials. In the scenario of having already onboarded BYOS instances but no SCC credentials set, the following restrictions apply:
+There is a possibility that the user has valid SCC credentials set with already synced-up channels as well as {byos} onboarded, but at some point decides to delete those credentials. 
+
+In the scenario of having already onboarded {byos} instances but no SCC credentials set, the following restrictions apply:
 
 * A warning message will be presented to users pointing out to this situation as well as letting them know that they will not be able to manage those instances.
 * Non-compliant BYOS instances will not be able to be managed (neither through Salt or Salt-SSH). This applies to individual server management as well as through SSM and Action-chains. When dealing with several servers at once, as long as there is one non-compliant BYOS instance among them, the whole action/action-chain will be aborted for all servers.
