--- a/modules/specialized-guides/pages/public-cloud-guide/payg/payg-limitations.adoc
+++ b/modules/specialized-guides/pages/public-cloud-guide/payg/payg-limitations.adoc
@@ -11,5 +11,7 @@ There is a possibility that the user has valid SCC credentials set with already 
 In the scenario of having already onboarded {byos} instances but no SCC credentials set, the following restrictions apply:
 
 * A warning message will be presented to users pointing out to this situation as well as letting them know that they will not be able to manage those instances.
-* Non-compliant BYOS instances will not be able to be managed (neither through Salt or Salt-SSH). This applies to individual server management as well as through SSM and Action-chains. When dealing with several servers at once, as long as there is one non-compliant BYOS instance among them, the whole action/action-chain will be aborted for all servers.
+* Non-compliant {byos} instances will not be able to be managed neither through {salt} or Salt-SSH. 
+  This applies to individual server management, SSM and action-chains. 
+  When dealing with several servers at once, as long as there is one non-compliant {byos} instance among them, the entire action/action-chain will be aborted for all servers.
 * Non-compliant BYOS instances will not be able to access any repository hosted in {productname} {payg} as long as SCC credentials are not set. {productname} {payg} will reply with HTTP 401 Unauthorized until the situation is amended. I.e. trying to install/upgrade packages using zypper from those machines directly will not work.
