--- a/modules/specialized-guides/pages/public-cloud-guide/payg/payg-limitations.adoc
+++ b/modules/specialized-guides/pages/public-cloud-guide/payg/payg-limitations.adoc
@@ -14,4 +14,5 @@ In the scenario of having already onboarded {byos} instances but no SCC credenti
 * Non-compliant {byos} instances will not be able to be managed neither through {salt} or Salt-SSH. 
   This applies to individual server management, SSM and action-chains. 
   When dealing with several servers at once, as long as there is one non-compliant {byos} instance among them, the entire action/action-chain will be aborted for all servers.
-* Non-compliant BYOS instances will not be able to access any repository hosted in {productname} {payg} as long as SCC credentials are not set. {productname} {payg} will reply with HTTP 401 Unauthorized until the situation is amended. I.e. trying to install/upgrade packages using zypper from those machines directly will not work.
+* Non-compliant {byos} instances will not be able to access any repository hosted in {productname} {payg} as long as SCC credentials are not set. 
+  {productname} {payg} will return ``HTTP 401 Unauthorized`` until the situation is amended, that is trying to install or upgrade packages using zypper from those machines directly will not work.
