trad. client: cleanup contact methods

--- a/modules/client-configuration/pages/contact-methods-intro.adoc
+++ b/modules/client-configuration/pages/contact-methods-intro.adoc
@@ -11,3 +11,13 @@ Salt SSH::
 is useful only if network restrictions make it impossible for clients to establish contact to the server.
 This contact method has serious limitations.
 For more information, see xref:contact-methods-saltssh.adoc[].
+Salt Bundle::
+is a single binary package containing Salt Minion, Python 3, required Python modules, and libraries.
+Thus the connection method is independent from software installed on the client.
+For more information, see xref:contact-methods-saltbundle.adoc[].
+
+[NOTE]
+====
+The so-called traditional contact method is no longer supported with {productname} 5.0 and later.
+Before upgrading from {productname} 4 to 5, traditional clients and thus traditional proxies have to be migrated to {salt} or replaced with {salt} proxies.
+====
