--- a/modules/client-configuration/pages/contact-methods-saltssh.adoc
+++ b/modules/client-configuration/pages/contact-methods-saltssh.adoc
@@ -67,7 +67,7 @@ For more information on configuring the sudo user, see xref:client-configuration
 
 The Push via Salt SSH feature uses taskomatic to execute scheduled actions using [command]``salt-ssh``.
 The taskomatic job periodically checks for scheduled actions and executes them.
-Unlike Push via SSH on traditional clients, the Push via Salt SSH feature executes a complete [command]``salt-ssh`` call based on the scheduled action.
+The Push via Salt SSH feature executes a complete [command]``salt-ssh`` call based on the scheduled action.
 
 By default, twenty Salt SSH actions can be executed at a time.
 You can increase the number of actions that can be executed in parallel, by adding these lines to your configuration file, and adjusting the value of ``parallel_threads`` upwards.
