--- a/modules/client-configuration/nav-client-configuration-guide.adoc
+++ b/modules/client-configuration/nav-client-configuration-guide.adoc
@@ -41,14 +41,9 @@ endif::[]
 *** xref:activation-keys.adoc[Activation Keys]
 *** xref:gpg-keys.adoc[GPG Keys]
 ** xref:contact-methods-intro.adoc[Client Management Methods]
-*** xref:contact-methods-salt.adoc[Managing Salt Clients]
+*** xref:contact-methods-salt.adoc[Salt]
 **** xref:contact-methods-saltssh.adoc[Push via Salt SSH]
 **** xref:contact-methods-saltbundle.adoc[Salt Bundle]
-*** xref:contact-methods-traditional.adoc[Managing Traditional Clients]
-**** xref:contact-methods-rhnsd.adoc[rhnsd]
-***** xref:contact-methods-osad.adoc[OSAD]
-**** xref:contact-methods-pushssh.adoc[Push via SSH]
-*** xref:contact-methods-migrate-traditional.adoc[Migrate Traditional Clients]
 ** xref:registration-overview.adoc[Client Registration]
 *** xref:registration-methods.adoc[Registration Methods]
 **** xref:registration-webui.adoc[Register with the Web UI]
