--- a/modules/client-configuration/pages/contact-methods-salt.adoc
+++ b/modules/client-configuration/pages/contact-methods-salt.adoc
@@ -9,7 +9,7 @@ The Salt Contact Method is the best scaling method.
 All new {productname} features are supported.
 
 The so-called traditional contact method is no longer supported with {productname} 5.0 and later.
-Traditional clients and thus traditional proxies have to be migrated to {salt} or replaced with {salt} proxies.
+Before upgrading from {productname} 4 to 5, traditional clients and thus traditional proxies have to be migrated to {salt} or replaced with {salt} proxies.
 endif::[]
 
 Software updates are generally pushed from the server to the client.
